Spacing fix for footer.

--- a/web/css/joystick.css
+++ b/web/css/joystick.css
@@ -1,7 +1,7 @@
 #joystick-composer {
     position: relative;
     width: 500px;
-    height: 500px;
+    height: 410px;
     margin: 0 auto;
     -webkit-perspective: 450;
     -webkit-user-select: none;
